--- a/public/contacto.html
+++ b/public/contacto.html
@@ -78,9 +78,17 @@
                 <button type="submit">Enviar:</button>
             </form>
             <hr>
-         </section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.420472815924!2d-58.45105439091812!3d-34.56822587285423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5c5a1a105e1%3A0x9e42ac8ecb8c06e5!2sAv.%20Cabildo%201248%2C%20C1426AAZ%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1731625210011!5m2!1ses-419!2sar" width="1000" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.420472815924!2d-58.45105439091812!3d-34.56822587285423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5c5a1a105e1%3A0x9e42ac8ecb8c06e5!2sAv.%20Cabildo%201248%2C%20C1426AAZ%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1731625210011!5m2!1ses-419!2sar" 
+                    width="1000" 
+                    height="400" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
         <div class="col-12 align-self-end">
                <!-- Footer -->
                 <!-- Footer -->        
